--- a/Koting/Koting/View/GetUserPhoto.storyboard
+++ b/Koting/Koting/View/GetUserPhoto.storyboard
@@ -12,7 +12,7 @@
         <!--Get User PhotoVC-->
         <scene sceneID="BpW-e8-IkK">
             <objects>
-                <viewController storyboardIdentifier="GetUserPhoto" id="oxL-IE-BBd" customClass="GetUserPhotoVC" customModule="connectML" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GetUserPhoto" id="oxL-IE-BBd" customClass="GetUserPhotoVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Kh9-OP-GvK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
